Make board dimensions and speed variable. Fix button rendering on mobile

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -272,7 +272,6 @@ section {
 
 @media screen and (max-width: 768px) {
     header {
-        font-size: 100%;
         .game_buttons {
             padding-right: 0;
             button {
@@ -280,7 +279,9 @@ section {
                 width: 40px;
                 border-radius: 100%;
                 margin: 0;
+                font-size: 0px;
                 &::first-letter { 
+                    font-size: 15px;
                     text-decoration: none!important;
                 }
             }
